2009-04-14  Claudio Saavedra  <csaavedra@igalia.com>

	[Release 2.1.64]

	* NEWS: Updates.
	* configure.ac: Bump version.
	* debian/changelog: Updates.

2009-04-13  Alejandro G. Castro  <alex@igalia.com>

	Deprecation of the hildon_pannable_area_set_size_request_policy
	API, the only policy properly supported in gtk+ nowadays is the
	minimum size.

	* src/hildon-pannable-area.c,
	(hildon_pannable_area_size_request): Added a workaround for the
	size_request to avoid the problems of huge pixmaps in case someone
	is still using the function.
	* src/hildon-pannable-area.h: Deprecated the enum with the
	policies.

	Fixes: NB#110244 (Problems with the
	hildon_pannable_area_set_size_request_policy API)

2009-04-08  Alejandro G. Castro  <alex@igalia.com>

	* src/hildon-pannable-area.c,
	(hildon_pannable_area_init),
	(hildon_pannable_area_size_request),
	(hildon_pannable_area_style_set),
	(hildon_pannable_draw_vscroll),
	(hildon_pannable_draw_hscroll),
	(hildon_pannable_area_check_scrollbars): Replaced area_width with
	indicator_width to clarify the use of the attribute.

2009-04-08  Claudio Saavedra  <csaavedra@igalia.com>

	[Release 2.1.62]

	* NEWS: Updates.
	* configure.ac: Bump version.
	* debian/changelog: Updates.

2009-04-07  Alejandro Pinheiro <apinheiro@igalia.com>

	* src/hildon-picker-dialog.c
	* src/hildon-touch-selector.c
	Reverting the change that tried to avoid the hardcoded height on
	the picker dialog, as causes problems on the hildon-touch-selector
	initial-hint

	Fixes: NB#110029 (selectors not scrolling to selected value)

2009-04-07  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-touch-selector.c: Fix typos

2009-04-07  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-color-chooser.c (hildon_color_chooser_pointer_motion):
	Use the event coordinates instead of gdk_window_get_pointer(). Also,
	request more motions after using it.

2009-04-07  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-calendar.c (hildon_calendar_expose),